// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`format API formatNumber() options falls back and warns on invalid Intl.NumberFormat options 1`] = `
Array [
  "FORMAT_ERROR",
]
`;

exports[`format API formatNumber() options handles missing named formats and warns 1`] = `
Array [
  "UNSUPPORTED_FORMATTER",
]
`;
